--- a/css/main.css
+++ b/css/main.css
@@ -38,68 +38,15 @@ h1 {
 img {
     border: 0;
 }
-/* Colors
- ======================== */
-.white {
-    color: #fff;
-}
-.black {
-    color: #1D1E1F;
-}
-.grey {
-    color: #868686;
-}
-.blue {
-    color: #24A9F9;
-}
-.green {
-    color: #69DB91;
-}
-.pink {
-    color: #F4A1C4;
-}
-.faded-pink {
-    color: #A97389;
-}
-.rust {
-    color: #A28114;
-}
-.yellow {
-    color: #DFB113;
-}
-.gold {
-    color: #ddac36;
-}
-.bg-brown {
-    background-color: #0C0C0C;
-}
-.bg-white {
-    background-color: #fff;
-}
-.bg-red {
-    /*background-color: #da0024;*/
-}
-.bg-black {
-    background-color: #1D1E1F;
-}
-.show {
-    display: block !important;
-}
-.hide {
-    display: none !important;
-}
-/*  color: rgba(95, 92, 59,1);
-    color: rgb(125, 188, 169);
-    color: rgba(255,155,109,1);
-    color: rgb(234, 253, 137); */
 
 /* Main
  ======================== */
 body {
     font-family: 'Open Sans', sans-serif;
     background-color: #fff;
+    background-color: #f2f2f2;
     font-size: 16px;
-    color: #000;
+    color: #1E2125;
 }
 ul, h1, h2, h3, h4, article {
     margin: 0;
@@ -123,11 +70,6 @@ img {
     width: 90%;
     margin: 0 auto;
 }
-.full-width {
-    width: 100%;
-    float: left;
-    padding: 30px 0 60px 0;
-}
 
 /* Container device sizes
  ======================== */
@@ -137,61 +79,58 @@ img {
         width: 90%;
     }
 }
-
 .heading {
-    font-size: 2.5rem;
-    line-height: 3.6rem;
-    color: #0C0C0C;
+    font-size: 2.1rem;
+    line-height: 2rem;
     font-weight: 300;
     margin: 0 auto;
     margin-top: 25px;
-    border-top: 3px solid #0C0C0C;
+    text-align: center;
 }
 .heading-secondary {
     font-family: 'Open Sans', sans-serif;
-    font-size: 1.6rem;
-    line-height: 2.6rem;
-    color: #000;
+    font-size: 1.4rem;
+    line-height: 1rem;
     font-weight: 300;
     margin-top: 30px;
+    margin-bottom: 40px;
+    opacity: .8;
+    text-align: center;
 }
-.art-boxZ {
-    box-sizing: border-box;
-    width: 33%;
-    margin: 0;
-    float: left;
-    border: 0;
-    padding: 10px;
-    transition: .3s all;
-}
-.art-piece {
-    width: 100%;
-    display: block;
-    cursor: pointer;
-}
-.art-title {
-    display: block;
-    margin-top: 15px;
-    padding-bottom: 10px;
-    color: #0C0C0C;
-    font-size: 1.2rem;
-    font-weight: 300;
-}
-
 .col-third {
-    width: 33%;
+    width: 32%;
     float: left;
+    margin-right: 1%;
+}
+.col-third:last-child {
+    margin-right: 0;
 }
 .col-third .art-box {
     box-sizing: border-box;
     padding: 10px;
     max-width: 100%;
     height: auto;
+    background-color: #fff;
+    margin-bottom: 10px;
+    border-radius: 2px;
+}
+.art-piece {
+    width: 100%;
+    cursor: pointer;
+    border-radius: 2px;
+}
+.art-title {
+    display: block;
+    margin-top: 15px;
+    padding-bottom: 10px;
+    font-size: 1.2rem;
+    font-weight: 300;
 }
 
 /* Mobile
   ======================== */
-@media(max-width: 480px) {
+
+@media(max-width: 767px) {
     .heading {
         font-size: 1.7rem;
         line-height: 2.8rem;
@@ -202,11 +141,10 @@ img {
         line-height: 2.3rem;
         margin-top: 20px;
     }
-    .art-box {
+    .col-third {
         width: 100%;
-    }
-    .art-box:nth-child(odd) {
-        margin-left: 0;
+        float: left;
+        margin-right: 0;
     }
 }
 .footer {
@@ -214,10 +152,57 @@ img {
     padding: 80px 0;
     text-align: center;
     float: left;
+    background-color: #1E2125;
 }
 .footer-copy {
-    color: #333;
+    opacity: .5;
+    color: #fff;
     line-height: 1rem;
-    font-size: 1.2rem;
+    font-size: 1rem;
     font-weight: 300;
+}
+
+/* Zoom
+  ======================== */
+
+  img[data-action="zoom"] {
+  cursor: pointer;
+  cursor: -webkit-zoom-in;
+  cursor: -moz-zoom-in;
+}
+.zoom-img,
+.zoom-img-wrap {
+  position: relative;
+  z-index: 666;
+  -webkit-transition: all 300ms;
+       -o-transition: all 300ms;
+          transition: all 300ms;
+}
+img.zoom-img {
+  cursor: pointer;
+  cursor: -webkit-zoom-out;
+  cursor: -moz-zoom-out;
+}
+.zoom-overlay {
+  z-index: 420;
+  background: #fff;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  pointer-events: none;
+  filter: "alpha(opacity=0)";
+  opacity: 0;
+  -webkit-transition:      opacity 300ms;
+       -o-transition:      opacity 300ms;
+          transition:      opacity 300ms;
+}
+.zoom-overlay-open .zoom-overlay {
+  filter: "alpha(opacity=100)";
+  opacity: 1;
+}
+.zoom-overlay-open,
+.zoom-overlay-transitioning {
+  cursor: default;
 }
